2004-01-22  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octMakefile.in (maintainer-clean, distclean):
	Remove Makefile and autom4te.cache.

2004-01-14  David Bateman  <dbateman@free.fr>

	* configure.in: Test for the presence of the function 
	H5Gget_num_objs	in HDF5 library, and define HAVE_H5GGET_NUM_OBJS.
 	
2004-01-06  Per Persson  <persquare@mac.com>

	* aclocal.m4 (OCTAVE_CXX_PREPENDS_UNDERSCORE): Recognize
	*-*-darwin*, not *-*-darwin6*.

2003-12-20  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* INSTALL: Update to newer version from autoconf.

2003-11-26  Cyril Humbert  <Cyril.Humbert@univ-mlv.fr>

	* octave-config.in (--m-site-dir): Echo $LOCALVERFCNFILEDIR, not
	$OCTAVE_LOCALVERFCNFILEDIR.
	(--oct-site-dir): Echo $LOCALVEROCTFILEDIR, not
	$OCTAVE_LOCALVEROCTFILEDIR.

2003-11-20  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Also maybe add -W to WARN_CFLAGS and WARN_CXXFLAGS.

2003-11-15  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in (SHLLIB_VER): Fix typo.

	* Makeconf.in (WARN_CFLAGS, WARN_CXXFLAGS): Substitute them.
	(ALL_CFLAGS, BUG_CFLAGS): Add $(WARN_CFLAGS).
	(ALL_CXXFLAGS, BUG_CXXFLAGS): Add $(WARN_CXXFLAGS).
	(UGLY_ALL_CXXFLAGS): Delete.

	* configure.in: Add -Wall and -Wshadow to WARN_CFLAGS and
	WARN_CXXFLAGS instead of CFLAGS and CXXFLAGS.

2003-11-12  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: If we need alloca, then also include it in LIBGLOB.

2003-11-10  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Preserve CFLAGS and CXXFLAGS before doing anything.
	Maybe add -Wshadow to CFLAGS and CXXFLAGS.

2003-10-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs/octave-mod.el (octave-comment-start): Simplify.
	(octave-point): Remove.
	(octave-in-comment-p, octave-in-string-p)
	(octave-not-in-string-or-comment-p, calculate-octave-indent)
	(octave-blink-matching-block-open, octave-auto-fill):
	Use line-(beginning|end)-position instead.

2003-10-29  John W. Eaton  <jwe@bevo.che.wisc.edu>
