@@ -30,7 +30,7 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include <cstring>
 
 #include <iostream>
-#include <memory>
+#include <vector>
 
 #ifdef HAVE_SYS_TYPES_H
 #include <sys/types.h>
