@@ -35,7 +35,6 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include <fstream>
 #include <iomanip>
 #include <iostream>
-#include <memory>
 #include <string>
 
 #ifdef HAVE_HDF5
