@@ -31,7 +31,6 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include <fstream>
 #include <iomanip>
 #include <iostream>
-#include <memory>
 #include <string>
 
 #include "byte-swap.h"
