@@ -33,8 +33,8 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include <fstream>
 #include <iomanip>
 #include <iostream>
-#include <memory>
 #include <string>
+#include <vector>
 
 #include "byte-swap.h"
 #include "data-conv.h"
