@@ -29,6 +29,7 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #endif
 
 #include <iostream>
+#include <vector>
 
 #include "lo-ieee.h"
 #include "mx-base.h"
