@@ -31,6 +31,7 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include <climits>
 
 #include <iostream>
+#include <vector>
 
 #include "lo-ieee.h"
 #include "lo-utils.h"
