@@ -1,3 +1,9 @@
+2004-01-23  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* configure.in (AH_BOTTOM):
+	Define OCTAVE_LOCAL_BUFFER using vector<T> instead of auto_ptr.
+	Suggested by Paul Thomas <Paul.Thomas@jet.efda.org>
+
 2004-01-22  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* octMakefile.in (maintainer-clean, distclean):
